[project]
name = "cybermule"
version = "0.1.0"
description = "An AI-powered CLI agent for code generation, testing, and Git commit review"
authors = [{ name = "Your Name", email = "your@email.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "typer[all]",
    "langchain",
    "faiss-cpu",
    "pyyaml",
]

[project.scripts]
cybermule = "cybermule.cli.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff"
]
aws = ["boto3"]
ollama = ["langchain_ollama"]
anthropic = ["anthropic"]
